# crazyswarm2

./: .gitignore  README.md  log3880012195.csv  params3679191350.csv
.github/workflows/: ci-ros2.yml  systemtests.yml  systemtests_sim.yml
crazyflie/: CHANGELOG.rst  CMakeLists.txt  package.xml
crazyflie/config/: allcrazyflies.yaml  config.rviz  crazyflies.yaml  motion_capture.yaml  server.yaml  teleop.yaml
crazyflie/launch/: launch.py
crazyflie/scripts/: chooser.py  crazyflie_server.py  gui.py
crazyflie/src/: crazyflie_server.cpp  teleop.cpp
crazyflie_examples/: CHANGELOG.rst  package.xml  setup.cfg
crazyflie_examples/crazyflie_examples/: goto_unicast.py  hello_world.py  set_param.py  swarm_manager.py  swarm_manager2.py
crazyflie_examples/launch/: keyboard_velmux_launch.py
crazyflie_interfaces/: CHANGELOG.rst  package.xml
crazyflie_py/: CHANGELOG.rst  package.xml  setup.py
crazyflie_py/crazyflie_py/: crazyflie.py  crazyswarm_py.py
crazyflie_sim/: CHANGELOG.rst  package.xml
crazyflie_sim/crazyflie_sim/: crazyflie_server.py
crazyflie_sim/crazyflie_sim/visualization/: rviz.py
docs2/: conf.py  index.rst  installation.rst  overview.rst  requirements.txt  tutorials.rst  usage.rst
